guides/applications/v7/sites_frameworks/getting_started/express.md
---
title: Express
---

[Express](https://expressjs.com) is a fast, unopinionated, minimalist web framework for Node.js. The {{ PRODUCT }} {{ PRODUCT_PLATFORM }}'s cloud environment makes it easy to run apps without managing Node.js servers.

<!-- <Video src="https://youtu.be/HnDR07NCVoI" /> -->

{{ PREREQ.md }}

### Initialize your project {/*initialize-your-project*/}

In the root directory of your project run `{{ FULL_CLI_NAME }} init`:

```bash
{{ FULL_CLI_NAME }} init {{ INIT_ARG_EDGIO_VERSION }}
```

This will automatically update your `package.json` and add all of the required {{ PRODUCT }} dependencies and files to your project. These include:

- The `{{ PACKAGE_NAME }}/core` package - Allows you to declare routes and deploy your application on {{ PRODUCT }}
- The `{{ PACKAGE_NAME }}/prefetch` package - Allows you to configure a service worker to prefetch and cache pages to improve browsing speed
- The `{{ PACKAGE_NAME }}/connectors` package
- `{{ CONFIG_FILE }}` - A configuration file for {{ PRODUCT }}
- `routes.js` - A default routes file that sends all requests to Ember.js.

### Configure the routes {/*configure-the-routes*/}

The default `routes.js` file created by `{{ FULL_CLI_NAME }} init` sends all requests to Express server via a fallback route.

```js
// This file was added by {{ FULL_CLI_NAME }} init.
// You should commit this file to source control.
import { Router, edgioRoutes } from '@edgio/core'

export default new Router()
  .use(edgioRoutes)
```

## Running your app locally {/* running-your-app-locally */}

Test your app with the {{ PRODUCT_PLATFORM }} on your local machine by running the following command in your project's root directory:

```bash
{{ FULL_CLI_NAME }} dev
```

<Important>

{{ PRODUCT }} CLI does not support running Express servers written in TypeScript in development mode. Instead, perform a production build and test your app locally by running the production server.

</Important>

To run your app in production mode locally, build your app and run the server:

```bash
{{ FULL_CLI_NAME }} build
{{ FULL_CLI_NAME }} run --production
```

## Deploying {/* deploying */}

Deploy your app to the {{ PRODUCT_PLATFORM }} by running the following command in your project's root directory:

```bash
{{ FULL_CLI_NAME }} deploy
```

{{ system_origins_callout.md }}

## Overriding the default app location {/* overriding-the-default-app-location */}

When you deploy your Express app to the {{ PRODUCT_PLATFORM }}, the {{ PRODUCT }} CLI bundles your app as a single javascript file so that it can be run as a Cloud Function. By default, {{ COMPANY_NAME }} looks for your app in the following common locations:

- src/server.ts
- src/server.js
- src/app.ts
- src/app.js
- src/index.ts
- src/index.js
- server.js
- app.js
- index.js

If it cannot find one of these files, you can specify the path to the app in `{{ CONFIG_FILE }}`:

```js filename='{{ CONFIG_FILE }}' ins="1,6"
const {join} = require('path');

module.exports = {
  connector: '{{ PACKAGE_NAME }}/express',
  express: {
    appPath: join(process.cwd(), 'path', 'to', 'app.js'),
  },
};
```

The file you specify in `appPath` should export an instance of an express app using `export default` or `module.exports`.

## Serving Static Assets {/* serving-static-assets */}

If your express app serves any static assets, you'll need to add routes to your {{ PRODUCT }} router configuration to serve them from the edge. For example, to serve all paths under `/assets` from `dist/client/assets`:

```js filename="routes.js" ins="14-16"
import { Router, edgioRoutes } from '@edgio/core'

export default new Router()
  // serve all unmatched URLs from express
  .use(edgioRoutes)
  // Create serveStatic route for each file in the folder build
  // dist/client/assets with a cache-control header of 's-maxage=315360000'
  // and serve them under the /assets route
  .match('/assets/:path*', ({ cache, serveStatic }) => {
    serveStatic('dist/client/assets/:path*');
  })
```

## Adding Additional Files Needed during SSR {/* adding-additional-files-needed-during-ssr */}

If your express app expects to be able to read files from the filesystem at runtime, for example an index.html template, you can ensure they are included in the app bundle that is deployed to {{ PRODUCT_PLATFORM }}'s cloud workers by adding the following to {{ CONFIG_FILE }}

```js filename='{{ CONFIG_FILE }}' ins="4-7"
module.exports = {
  connector: '{{ PACKAGE_NAME }}/express',
  // Rest of the config
  // Include index.html in the cloud bundle
  serverless: {
    include: ['dist/client/index.html'],
  },
};
```

## Transpiling and TypeScript support {/* transpiling-and-typescript-support */}

{{ PRODUCT }} will automatically transpile JavaScript and TypeScript source code for running on Node.js version 14. If you want to control how
source files are compiled, you can transpile your app on your own and point your `appPath` config to the transpiled version of your app's main entry point.

## Bundling Options {/* bundling-options */}

By default, {{ PRODUCT }} uses ESBuild to transpile and bundle your application code. If you're having difficulty fitting your app within the limit for cloud bundles, you can try bundling with [ncc](https://github.com/vercel/ncc), which should produce smaller bundles, by adding the following to {{ CONFIG_FILE }}:

```js filename='{{ CONFIG_FILE }}' highlight="3"
module.exports = {
  express: {
    bundler: '@vercel/ncc',
  },
};
```

Then add ncc to your app's build dependencies:

```bash
npm i -D @vercel/ncc@^0.34.0
```

Or, using yarn:

```bash
yarn add --dev @vercel/ncc@^0.34.0
```

NCC produces a tree-shaken, bundle which includes your application code and all of its dependencies in a single file (written to .edgio/lambda/backends/index.js). [NFT](https://github.com/vercel/nft) is also supported:

```js filename='{{ CONFIG_FILE }}' highlight="3"
module.exports = {
  express: {
    bundler: '@vercel/nft',
  },
};
```

Then add nft to your app's build dependencies:

```bash
npm i -D @vercel/nft@^0.21.0
```

Or, using yarn:

```bash
yarn add --dev @vercel/nft@^0.21.0
```

NFT is similar to NCC, but it produces an exploded directory tree instead of including all of your code in a single file. We recommend trying ncc first.
